# machine

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  DESIGN.md  LICENSE  PLAN.md  README.md  REVIEW.md  bootstrap.ps1  bootstrap.py  bootstrap.sh  pyproject.toml  setup.py  setup.sh  update.sh
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: audit.prompt.md
.github/setup/: action.yml
.github/workflows/: ai-commits.yml  cd.yml  ci.yml  deploy.yml  tests.yml
.zed/: settings.json
app/: __init__.py  __main__.py  cli.py  config.py  env.py  linux.py  machine.py  main.py  models.py  pkg_manager.py  plugin.py  utils.py  windows.py
app/machines/: __init__.py  codespaces.py  gleason.py  machine.py  macos.py  rpi.py  testbench.py  testing.py  windows.py
app/package_managers/: pipx.py
app/pkg_managers/: __init__.py  apt.py  brew.py  linux.py  mas.py  pipx.py  pkg_manager.py  scoop.py  snap.py  windows.py  winget.py
app/plugins/: __init__.py  git.py  nvim.py  plugin.py  powershell.py  private_files.py  python.py  shell.py  ssh.py  tailscale.py  testbench.py  tools.py  vscode.py  zed.py
app/utils/: __init__.py  app.py  config.py  env.py  filesystem.py  helpers.py  logging.py  misc.py  shell.py  validators.py
chezmoi/: .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  dot_gitconfig.tmpl  dot_gitignore.tmpl  dot_zshenv.tmpl  dot_zshrc  dot_zshrc.tmpl  hello.txt.tmpl  symlink_dot_gitignore
chezmoi/.chezmoidata/: packages.yaml.tmpl
chezmoi/.chezmoiscripts/: run_00_scripts.py.tmpl  run_after_01_scripts.py.tmpl  run_after_ssh.py.tmpl  run_before_02_scripts.py.tmpl  run_once_03_scripts.py.tmpl  run_onchange_04_scripts.py.tmpl  run_onchange_after_packages.py.tmpl  run_onchange_install-packages.py.tmpl  run_packages.py.tmpl  run_scripts.py.tmpl
chezmoi/.chezmoitemplates/: gitconfig  packages  profile.ps1  script_loader  script_loader.tmpl  script_runner.py  scripts  symlink  zshenv  zshrc
chezmoi/dot_config/: symlink_nvim.tmpl
chezmoi/dot_ssh/: config.tmpl  symlink_config.tmpl
config/: .gitconfig  ghostty.config  packages.yaml  ps_profile.ps1  zinit.sh  zshenv  zshrc
config/base/: ps_profile.ps1  requirements.md  zshenv  zshrc
config/claude/: claude_desktop_config.json  module.py  settings.json
config/codespaces/: zshrc
config/core/: .gitconfig  keys  module.py  private.sh  ps_profile.ps1  zshenv  zshrc
config/ghostty/: module.py
config/git/: .gitconfig  .gitconfig.windows  .gitconfig.wsl  .gitignore  gitconfig  module.py
config/gleason/: win.pkg
config/homelab/: README.md  module.py
config/macos/: Brewfile.lock.json  brewfile  ghostty.config  ssh.config  (+3 more)
docs/: cli.md
machine/: __init__.py  core.py  dotfiles.py  packages.py  scripts.py  ssh.py  state.py  update.py
machines/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  check.sh  cli.py  coverage.sh  deploy.py  dev.py  docs.sh  fix.sh  helpers.py  hooks.sh  install-packages.py  packages.py  release.sh  run.sh  scripts.py  setup.sh  ssh.py  test.sh  update.py  update.sh  utils.py
src/: __init__.py  core.py  dotfiles.py  packages.py  scripts.py  ssh.py  state.py  update.py
tests/: __init__.py  test_config.py  test_env.py  test_files.py  test_main.py  test_manifests.py  test_packages.py  test_utils.py
tests_new/: test_all.py  test_enhanced_utils.py
(+406 files in other folders)
