# MARK: Project
# =============================================================================

[project]
name = "machine"
version = "0.2.1"

description = "Machine setup CLI app."
readme = "README.md"
license = "MIT"

authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]
urls = { repository = "https://github.com/mohdfareed/machine" }

# MARK: Dependencies
# =============================================================================

requires-python = ">=3.9.6" # default macos version

dependencies = [
    "typer",
    "rich",
    "pydantic",
    "pydantic-settings",
    "platformdirs",
]

[project.optional-dependencies]
dev = [
    "pre-commit", # pre-commit formatting hooks
    "pytest",     # testing
    "pytest-cov", # test coverage
    "pylance",    # language server
    "black",      # code formatting
    "isort",      # import formatting
]

# MARK: Entry Point
# =============================================================================

[project.scripts]
machine = "app.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# project sources
[tool.setuptools]
packages = ["app"]

# MARK: Testing
# =============================================================================

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "app/machines/*",
    "app/plugins/*",
]

# MARK: Tools
# =============================================================================

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
